<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简日记</string>
    <string name="action_settings">Settings</string>
    <string name="login_ts">简日记微博客服：</string>
    <string name="login_developer">那些年的逗比萌宠</string>
    <string name="login_copy_btn">关注</string>
    <string name="admin_ts">PS：关注微博客服后，查询确认用户昵称，输入用户昵称开通用户权限</string>
    <string name="admin_screen_name">微博昵称</string>
    <string name="admin_jihuo">激活</string>
    <string name="app_info">微博运营助手</string>
    <string name="weibo_clone">克隆</string>
    <string name="weibo_repeat">重发</string>

    <string name="tabbar_chosen_text">精选</string>
    <string name="tabbar_task_text">任务</string>

    <string name="weibosdk_demo_token_to_string_format_1">用户ID：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>
    <string name="weibosdk_demo_logout_success">已注销</string>
    <string name="weibosdk_demo_logout_failed">注销失败</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>


    <string name="home_image_detail_image_pop_window_save_pic">保存图片</string>
    <string name="home_image_detail_image_pop_window_forward_weibo">转发微博</string>
    <string name="home_image_detail_image_pop_window_quit">取消</string>


    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>

    <!-- Time -->
    <string name="just_now">刚刚</string>
    <string name="min">分钟前</string>
    <string name="hour">小时前</string>
    <string name="day">天前</string>
    <string name="month">月前</string>
    <string name="year">年前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>


    <string name="idea_current_text">实时</string>
    <string name="idea_timer_text">定时</string>

</resources>