<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher" />

    <!-- 默认效果，其 style 为：@style/com_sina_weibo_sdk_loginview_default_style -->
    <com.sina.weibo.sdk.widget.LoginoutButton
        android:id="@+id/login_btn"
        style="@style/com_sina_weibo_sdk_loginview_silver_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="简日记" />

    <LinearLayout
        android:id="@+id/kefu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_ts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/erhaji_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/erhaji_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/login_developer"
                android:textColor="@color/center_area_comment_item_author"/>
            <Button
                android:id="@+id/login_copy_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:text="@string/login_copy_btn"
                android:textColor="@color/orange"
                android:background="@drawable/comment_item_bg"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
